# Smart-Desktop-Organizer

./: CMakeLists.txt  README.md
ConfigManager/: ConfigManager.cpp  ConfigManager.h
DesktopArrangement/: DesktopLayoutManager.cpp  DesktopLayoutManager.h
DesktopManager/: DesktopChecker.cpp  DesktopChecker.h  DesktopFileOperations.cpp  DesktopFileOperations.h  DesktopInfo.cpp  DesktopInfo.h  DesktopSorter.cpp  DesktopSorter.h  ItemTypes.h
Logging/: Logging.cpp  Logging.h
WebClassifier/: WebClassifier.cpp  WebClassifier.h
libs/nlohmann_json/: json.hpp
src/: main.cpp
src/mfc/: CheckResultsDlg.cpp  CheckResultsDlg.h  MainFrm.cpp  MainFrm.h  SettingsDlg.cpp  SettingsDlg.h  SmartDesktopOrganizerApp.cpp  SmartDesktopOrganizerApp.h  stdafx.cpp  stdafx.h
